syntax = "proto3";
package cosmos.distribution.v1beta1;

option go_package            = "github.com/cosmos/cosmos-sdk/x/distribution/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/distribution/v1beta1/distribution.proto";

// genesis types

// DelegatorWithdrawInfo
// the address for where distributions rewards are withdrawn to by default
// this struct is only used at genesis to feed in default withdraw addresses
message DelegatorWithdrawInfo {
  bytes delegator_address = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  bytes withdraw_address = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"withdraw_address\""
  ];
}

// ValidatorOutstandingRewardsRecord
// used for import/export via genesis json
message ValidatorOutstandingRewardsRecord {
  bytes validator_address = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ValAddress",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  repeated cosmos.base.v1beta1.DecCoin outstanding_rewards = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable)     = false,
    (gogoproto.moretags)     = "yaml:\"outstanding_rewards\""
  ];
}

// ValidatorAccumulatedCommissionRecord
// used for import / export via genesis json
message ValidatorAccumulatedCommissionRecord {
  bytes validator_address = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ValAddress",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  ValidatorAccumulatedCommission accumulated = 2 [
    (gogoproto.casttype) = "ValidatorAccumulatedCommission",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"accumulated\""
  ];
}

// ValidatorHistoricalRewardsRecord
// used for import / export via genesis json
message ValidatorHistoricalRewardsRecord {
  bytes validator_address = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ValAddress",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  uint64 period = 2;

  ValidatorHistoricalRewards rewards = 3[
    (gogoproto.casttype) = "ValidatorHistoricalRewards",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"rewards\""
  ];
}

// ValidatorCurrentRewardsRecord
// used for import / export via genesis json
message ValidatorCurrentRewardsRecord {
  bytes validator_address = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ValAddress",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  ValidatorCurrentRewards rewards = 2[
    (gogoproto.casttype) = "ValidatorCurrentRewards",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"rewards\""
  ];
}

// DelegatorStartingInfoRecord
// used for import / export via genesis json
message DelegatorStartingInfoRecord {
  bytes delegator_address = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  bytes validator_address = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ValAddress",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  DelegatorStartingInfo starting_info = 3 [
    (gogoproto.casttype) = "DelegatorStartingInfo",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"starting_info\""
  ];
}

// ValidatorSlashEventRecord
// used for import / export via genesis json
message ValidatorSlashEventRecord {
  bytes validator_address = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ValAddress",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
  uint64 height = 2;
  uint64 period = 3;
  ValidatorSlashEvent event = 4 [
    (gogoproto.casttype) = "ValidatorSlashEvent",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"event\""
  ];
}

// GenesisState - all distribution state that must be provided at genesis
message GenesisState {
  Params params = 1 [
    (gogoproto.casttype) = "Params",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"params\""
  ];

  FeePool fee_pool = 2 [
    (gogoproto.casttype) = "FeePool",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"fee_pool\""
  ];

  repeated DelegatorWithdrawInfo delegator_withdraw_infos = 3 [
    (gogoproto.casttype) = "DelegatorWithdrawInfo",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"delegator_withdraw_infos\""
  ];

  bytes previous_proposer = 4 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ConsAddress",
    (gogoproto.moretags) = "yaml:\"previous_proposer\""
  ];

  repeated ValidatorOutstandingRewardsRecord outstanding_rewards = 5 [
    (gogoproto.casttype) = "ValidatorOutstandingRewardsRecord",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"outstanding_rewards\""
  ];

  repeated ValidatorAccumulatedCommissionRecord validator_accumulated_commissions = 6 [
    (gogoproto.casttype) = "ValidatorAccumulatedCommissionRecord",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"validator_accumulated_commissions\""
  ];

  repeated ValidatorHistoricalRewardsRecord validator_historical_rewards = 7 [
    (gogoproto.casttype) = "ValidatorHistoricalRewardsRecord",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"validator_historical_rewards\""
  ];

  repeated ValidatorCurrentRewardsRecord validator_current_rewards = 8 [
    (gogoproto.casttype) = "ValidatorCurrentRewardsRecord",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"validator_current_rewards\""
  ];

  repeated DelegatorStartingInfoRecord delegator_starting_infos = 9 [
    (gogoproto.casttype) = "DelegatorStartingInfoRecord",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"delegator_starting_infos\""
  ];

  repeated ValidatorSlashEventRecord validator_slash_events = 10 [
    (gogoproto.casttype) = "ValidatorSlashEventRecord",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"validator_slash_events\""
  ];
}
